alignment fixes

--- a/css/dizruptiv.css
+++ b/css/dizruptiv.css
@@ -259,6 +259,10 @@ and (max-width : 1024px)  {
         padding-bottom: 20px ;
     }
 
+    .bonusContent
+    {
+        padding: 8vw 5% !important;
+    }
 }
 
 /*media quiries for 1700 resulotion */
